<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Last modified: 06.09.18 16:46
  ~ Copyright (c) OpenDrone, 2018.  All rights reserved.
  ~ The entire project (including this file) is licensed under the GNU GPL v3.0
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navItem_Home"
        android:title="@string/navItem_Home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/navItem_FlightPlanner"
        android:title="@string/navItem_FlightPlanner"
        android:icon="@drawable/ic_flightplaner"
        />
    <item
        android:id="@+id/navItem_Drones"
        android:title="@string/navItem_Drones"
        android:icon="@drawable/opendrone_logo"
        />
    <item
        android:id="@+id/navItem_Fly"
        android:title="@string/navItem_Fly"
        android:icon="@drawable/ic_fly"
        />
    <item
        android:id="@+id/navItem_Settings"
        android:title="@string/navItem_Settings"
        android:icon="@drawable/ic_settings"
        />
    <item
        android:id="@+id/navItem_Libs"
        android:title="@string/navItem_Libs"
        android:icon="@drawable/ic_used_libraries"
        />
</menu>