<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DroneCalibrationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_Calibrate"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColor"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar_Calibrate"
        app:titleTextColor="@color/secondaryTextColor" />

    <TextView
        android:id="@+id/txtView_calibration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txtView_default_height"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_calibration"
        android:textSize="@dimen/textSize_default"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_Calibrate" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="116dp"
        android:layout_marginTop="144dp"
        android:visibility="visible"
        app:indicatorColor="@color/primaryDarkColor"
        app:indicatorName="BallClipRotateMultipleIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_calibration" />

    <Button
        android:id="@+id/btn_calibration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txtView_default_height"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="88dp"
        android:text="@string/btn_calibration"
        android:textSize="@dimen/textSize_default"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avi" />





</android.support.constraint.ConstraintLayout>