<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Last modified: 06.09.18 15:58
  ~ Copyright (c) OpenDrone, 2018.  All rights reserved.
  ~ The entire project (including this file) is licensed under the GNU GPL v3.0
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".FlyStart">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_FlyAuto"
        android:layout_width="125dp"
        android:layout_height="@dimen/txtView_default_height"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00ffffff"
        android:text="@string/btn_Fly"
        android:textColor="@color/primaryColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_FlyTestConnection"
        android:layout_width="200dp"
        android:layout_height="@dimen/txtView_default_height"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00ffffff"
        android:text="@string/btn_TestConn"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_FlyAuto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtView_FlightMode"
        android:layout_width="150dp"
        android:layout_height="@dimen/txtView_default_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:gravity="center_vertical"
        android:text="@string/txtView_FlightMode"
        android:textSize="@dimen/textSize_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_FlightMode"
        android:layout_width="160dp"
        android:layout_height="@dimen/txtView_default_height"
        android:layout_marginStart="32dp"
        android:entries="@array/array_FlightMode"
        app:layout_constraintStart_toEndOf="@+id/txtView_FlightMode"
        app:layout_constraintTop_toTopOf="@+id/txtView_FlightMode" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_FlightMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/txtView_FlightMode"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/txtView_Mission"
            android:layout_width="150dp"
            android:layout_height="@dimen/txtView_default_height"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/txtView_Mission"
            android:textSize="@dimen/textSize_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner_Mission"
            android:layout_width="160dp"
            android:layout_height="@dimen/txtView_default_height"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtView_Mission" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>