<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Last modified: 06.09.18 15:58
  ~ Copyright (c) OpenDrone, 2018.  All rights reserved.
  ~ The entire project (including this file) is licensed under the GNU GPL v3.0
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlyAutoFly">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_Land"
        android:layout_width="125dp"
        android:layout_height="@dimen/txtView_default_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_shape_round_orange"
        android:text="@string/btn_Land"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/textSize_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <Button
        android:id="@+id/btn_GoHome"
        android:layout_width="125dp"
        android:layout_height="@dimen/txtView_default_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_shape_round_orange"
        android:text="@string/btn_GoHome"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/textSize_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Control"
        app:layout_constraintStart_toEndOf="@+id/btn_Land"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <Button
        android:id="@+id/btn_Control"
        android:layout_width="125dp"
        android:layout_height="@dimen/txtView_default_height"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/button_shape_round_orange"
        android:text="@string/btn_Control"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/textSize_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Coordinates, Temperature, Pressure, Speed, Height"
        android:textSize="@dimen/textSize_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_FlyTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Height:"
        android:textSize="@dimen/textSize_default"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="49dp" />

</android.support.constraint.ConstraintLayout>